fstab binds appear as mounts (x-gvfs-hide is being ignored)
Submitted by Thorned Rose
Link to original bug (#782814)
Description
Created attachment 352121 Deepin File Manager (Nautilus) displaying fstab binds as removable drives
TL;DR -- glib2 version 2.52.2+1+gb8bd46bc-1 (possibly the version before it as well, I haven't tested) causes fstab binds to appear as mounts in Deepin File Manager (Nautilus based) (and in Deepin Dock - Deepin is based on Gnome).
Deepin File Manager listed my system disk (as expected) but also listed all of my fstab binds as removable drives (Downloads, Music, Pictures, Videos and Documents although this was not listed as "Documents" but instead listed as the HDD label "Farsight"). Adding x-gvfs-hide did not hide those drives. Downgrading to glib2 and glib2-docs 2.52.0-1 resolves this behaviour. I first noted this bug behaviour here: https://bugs.launchpad.net/ubuntu/+source/glib2.0/+bug/452049 Details of my particular system and issue with what I tried to resolve it can be found here: https://bbs.archlinux.org/viewtopic.php?pid=1712030#p1712030
System Details:
Deepin Desktop 15.4 (Gnome based) on Arch Linux.
OS: Arch Linux Kernel: x86_64 Linux 4.10.13-1-ARCH Shell: bash 4.4.12 Resolution: 1920x1200 DE: Deepin 15.4 WM: Deepin WM WM Theme: Arc-Darker GTK Theme: Arc-Darker [GTK2/3] Icon Theme: deepin Font: Noto Sans 11 CPU: Intel Core i5-6500 @ 4x 3.6GHz [27.8°C] GPU: GeForce GTX 950 RAM: 2598MiB / 15990MiB
Attachment 352121, "Deepin File Manager (Nautilus) displaying fstab binds as removable drives":
Version: 2.52.x